fixed welcome div being too small

--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -17,7 +17,7 @@
     display: flex;
     text-align: center;
     flex-direction: column;
-    width: 25%;
+    width: 55%;
     margin: auto;
     z-index: 2;
     border-left: 1px solid rgb(103, 103, 103);
